--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px;
+  padding: 30px 20px 10px 20px;
 }
 
 .screen-header__title {
