--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 30px 20px 10px 20px;
+  margin-bottom: 10px;
 }
 
 .screen-header__title {
