--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,3 +1,7 @@
+.user-component {
+  justify-content: space-between;
+}
+
 .user-component,
 .user-component__column:first-child {
   display: flex;
@@ -5,19 +9,50 @@
 }
 
 .user-component__avatar {
-  width: 70px;
-  height: 70px;
+  width: 60px;
+  height: 60px;
   border-radius: 30px;
   margin-right: 20px;
 }
 
 .user-component__title {
   font-weight: 600;
-  font-size: 20px;
+  font-size: 17px;
+  color: black;
+}
+
+.user-component__title--not-bold {
+  font-weight: 400;
+  font-size: 15px;
 }
 
 .user-component__subtitle {
   margin-top: 5px;
   color: rgba(0, 0, 0, 0.5);
   font-size: 13px;
+}
+
+.user-component__avatar--xl {
+  width: 70px;
+  height: 70px;
+  border-radius: 30px;
+  margin-right: 20px;
+}
+
+.user-component__avatar--sm {
+  width: 60px;
+  height: 60px;
+  border-radius: 20px;
+}
+
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.user-component__time {
+  margin-bottom: 10px;
+  display: block;
 }
