--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,8 +4,27 @@
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 14px;
+  margin-bottom: 10px;
+  margin-top: -10px;
 }
 
 #friends-display-link i {
   color: rgba(0, 0, 0, 0.3);
+}
+
+.friends-screen {
+  padding: 0px var(--horizontal-space);
+}
+
+.friends-screen__channel {
+  margin-top: 10px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  padding-top: 10px;
+}
+
+.friends-screen__channel-header {
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
 }
