--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -1,9 +1,27 @@
 .alt-header {
   padding: 30px var(--horizontal-space) 10px var(--horizontal-space);
-  margin-bottom: 10px;
+
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
+}
+
+.alt-header__column {
+  width: 33%;
+}
+
+.alt-header__column:first-child {
+  margin-right: auto;
+}
+
+.alt-header__column:nth-child(2) {
+  text-align: center;
+}
+
+.alt-header__column:last-child {
+  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .alt-header__title {
@@ -11,3 +29,6 @@
   font-weight: 600;
 }
 
+.alt-header__column span:last-child {
+  margin-left: 15px;
+}
