--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -2,13 +2,28 @@
   position: absolute;
   z-index: 99;
   height: 100vh;
-  background-color: var(--yellow);
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 32px;
   top: 0;
+  color: #fff;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: change 5s ease-in-out infinite;
+}
+
+@keyframes change {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
 }
 
 @media screen and (max-width: 645px) {
