--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -2,6 +2,44 @@
   margin-top: 25px;
 }
 
+@keyframes shake-top {
+  0%,
+  100% {
+    transform: rotate(0deg);
+    transform-origin: 50% 0;
+    color: var(--yellow);
+  }
+  10% {
+    transform: rotate(2deg);
+    color: var(--yellow);
+  }
+  20%,
+  40%,
+  60% {
+    transform: rotate(-4deg);
+    color: var(--yellow);
+  }
+  30%,
+  50%,
+  70% {
+    transform: rotate(4deg);
+    color: var(--yellow);
+  }
+  80% {
+    transform: rotate(-2deg);
+    color: var(--yellow);
+  }
+  90% {
+    transform: rotate(2deg);
+    color: var(--yellow);
+  }
+}
+
+.icon-row__icon i:hover {
+  animation: shake-top 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both
+    infinite;
+}
+
 .more-suggestions {
   margin-top: 50px;
   border-top: var(--main-border);
@@ -17,16 +55,27 @@
 }
 
 .more-suggestions__icon {
-  margin-right: 30px;
+  margin-right: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+@keyframes rotate-scale-up-diag-2 {
+  0% {
+    transform: scale(1) rotate3d(-1, 1, 0, 0deg);
+  }
+  50% {
+    transform: scale(2) rotate3d(-1, 1, 0, 180deg);
+  }
+  100% {
+    transform: scale(1) rotate3d(-1, 1, 0, 360deg);
+  }
+}
+
 .more-suggestions__icon-image {
   width: 60px;
   height: 60px;
-  background-color: var(--yellow);
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -34,7 +83,11 @@
   margin-bottom: 10px;
 }
 
-.more-suggestions__icon-image i {
-  font-size: 30px;
+.more-suggestions__icon-image:hover {
+  animation: rotate-scale-up-diag-2 0.7s linear both;
+}
+
+.more-suggestions__icon-image img {
+  width: 50px;
   color: white;
 }
